k8s-deployment/gitea-runner-dind.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: act-runner
  name: act-runner
  namespace: gitea
spec:
  # Tip: If using storage like EFS or RWX, you can set replicas to 2 or 10 to have multiple runners.
  replicas: 1
  selector:
    matchLabels:
      app: act-runner
  strategy:
    rollingUpdate:
      maxSurge: 5%
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: act-runner
    spec:
      restartPolicy: Always
      # Note: Ensure to request storage and modify this as needed.
      volumes:
      - name: docker-certs
        emptyDir: {}
      - name: runner-data
        persistentVolumeClaim:
          claimName: act-runner-vol
      - name: runner-config
        configMap:
          name: act-runner-config
      containers:
      - name: runner
        image: gitea/act_runner:nightly
        resources:
          limits:
            cpu: 2
            memory: 4Gi
          requests:
            cpu: 2
            memory: 4Gi
        command: ["sh", "-c", "while ! nc -z 127.0.0.1 2376 </dev/null; do echo 'waiting for docker daemon...'; sleep 5; done; /sbin/tini -- run.sh"]
        volumeMounts:
        - name: docker-certs
          mountPath: /certs
        - name: runner-data
          mountPath: /data
        - name: runner-config
          mountPath: /data/runner-config.yml
          subPath: runner-config.yml
      - name: daemon
        image: docker:28.0.1-dind
        securityContext:
          privileged: true
        volumeMounts:
        - name: docker-certs
          mountPath: /certs
