k8s-deployment/mysql-deploy.yaml
# MySQL Deployment [Zero Downtime] by H0llyW00dzZ for a microservices Kubernetes cluster.
#
# Note: This will automatically create the namespace if it doesn't exist. If the namespace already exists, it won't be affected.
apiVersion: v1
kind: Namespace
metadata:
  name: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql # Change this to a descriptive name for the MySQL
  namespace: database # Change this to the namespace where the MySQL deployment is located
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: <IMAGE_HERE> # Put mysql image here for example "mysql:8.0"
          args:
            - --defaults-file=/etc/mysql/config/mysql-args.conf
            # Note: This is optional.
            # - --skip-mysqlx
          ports:
            - name: mysql
              containerPort: 3306
          resources:
            limits:
              cpu: 500m
              memory: 812Mi
            requests:
              cpu: 250m
              memory: 656Mi
          volumeMounts:
            - name: mysql-ssl
              mountPath: /etc/mysql/tls
            - name: mysql-persistent-storage
              mountPath: /var/run/mysqld
            - name: mysql-config
              mountPath: /etc/mysql/config
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: mysql-persistent-storage
              mountPath: /database/mysql
      volumes:
        # Note: This can be used with public CAs, for example, a certificate that can be used with a load balancer + MySQL:
        # - https://crt.sh/?q=a8bc9093e1f4ba202fc769b8818b8a279a5f70c91bee458d29d6ad3c5ac5e88c
        - name: mysql-ssl
          secret:
            secretName: mysql-ssl
        # Note: You have to request storage. It is recommended to use SSD storage + fully encrypted,
        # built-in flexibility which can be attached/detached by the cluster for this.
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-storage
        - name: mysql-config
          configMap:
            name: mysql-config
---
# Note: For MySQL, it's better to use a standalone load balancer and then bind it to a hostname.
# For example, a load balancer in GKE uses an IP, while a load balancer in EKS (AWS) uses a CNAME.
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: database
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: mysql
