k8s-deployment/redis-insight.yaml
# Redis Insight service named 'redis-insight-service'
apiVersion: v1
kind: Service
metadata:
  name: redis-insight-service
spec:
  type: LoadBalancer
  ports:
    - port: 80 # Default value from the docs at https://redis.io/docs/latest/operate/kubernetes/, can be customized
      targetPort: 5540 # Default value from the docs at https://redis.io/docs/latest/operate/kubernetes/, can be customized
  selector:
    app: redisinsight
---
# Redis Insight deployment named 'redisinsight'
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  labels:
    app: redisinsight
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redisinsight
  template:
    metadata:
      labels:
        app: redisinsight
    spec:
      volumes:
        - name: redisinsight
          persistentVolumeClaim:
            claimName: redisinsight-pv-claim
      containers:
        - name: redisinsight
          image: redis/redisinsight:latest # Use a specific version instead of "latest" because sometimes it can cause bugs.
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: redisinsight
              mountPath: /data
          ports:
            - containerPort: 5540 # Default value from the docs at https://redis.io/docs/latest/operate/kubernetes/, can be customized
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          env: # Important: You need to use secrets. For certificates, use cert-manager.io (recommended).
            - name: RI_SERVER_TLS_KEY
              valueFrom:
                secretKeyRef:
                  name: redisinsight-tls-secrets
                  key: tls.key
            - name: RI_SERVER_TLS_CERT
              valueFrom:
                secretKeyRef:
                  name: redisinsight-tls-secrets
                  key: tls.crt
            - name: RI_ENCRYPTION_KEY
              valueFrom:
                secretKeyRef:
                  name: redisinsight-encryption-secret
                  key: encryption-key
