k8s-deployment/restapis-deploy.yaml
# REST APIs Deployment [Zer0 Downtime] by H0llyW00dzZ for an microservices k8s.
---
# Note: This will automatically create the namespace if it doesn't exist. If the namespace already exists, it won't be affected.
apiVersion: v1
kind: Namespace
metadata:
  name: restapis
---
# Note: most env here are bound into secrets, so for generate secrets especially if the k8s has "HSM" use bash script "create_k8s_secret.sh"
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapis
  namespace: restapis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restapis
  template:
    metadata:
      labels:
        app: restapis
    spec:
      containers:
        - name: restapis
          image: <IMAGE_HERE> # Put Image related to this repository here
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          tty: true # Enable TTY for bubble tea
---
# Note: When using nginx-ingress for expose service it's better keep like this
apiVersion: v1
kind: Service
metadata:
  name: restapis-service
  namespace: restapis
spec:
  selector:
    app: restapis
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
